<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg">

    <include
        android:id="@+id/statu"
        layout="@layout/status_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px130"
        android:layout_marginTop="@dimen/px10"
        />

    <View
        android:id="@+id/status_back"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:background="@drawable/tran"
        android:visibility="invisible"/>


    <TextView
        android:id="@+id/net_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/setting_custom_rl"
        android:layout_alignLeft="@+id/setting_custom_rl"
        android:layout_marginBottom="30dp"
        android:text="@string/net_setitng_title"
        android:textColor="#ffffff"
        android:textSize="35sp"
        android:focusable="false"/>

    <TextView
        android:id="@+id/net_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/setting_custom_rl"
        android:layout_alignRight="@+id/setting_custom_rl"
        android:layout_alignTop="@+id/net_title"
        android:textColor="#fc0101"
        android:textSize="35sp"
        android:focusable="false"/>

    <RelativeLayout
        android:id="@+id/setting_custom_rl"
        android:layout_width="800dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:background="@drawable/about_bg">

        <LinearLayout
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/setting_custom_wifi"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:background="@drawable/sel_focus"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/wifi_setting"
                android:textColor="@android:color/white"
                android:textSize="25sp"/>

            <TextView
                android:id="@+id/setting_custom_ethernet"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:background="@drawable/sel_focus"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/ethernet_setting"
                android:textColor="@android:color/white"
                android:textSize="25sp"/>

            <TextView
                android:id="@+id/setting_custom_net_soft_ap"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:background="@drawable/sel_focus"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/net_soft_ap"
                android:textColor="@android:color/white"
                android:textSize="25sp"/>


            <TextView
                android:id="@+id/setting_custom_net_detection"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:background="@drawable/sel_focus"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/net_speed_test"
                android:textColor="@android:color/white"
                android:textSize="25sp"/>


        </LinearLayout>
    </RelativeLayout>


</RelativeLayout>