<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg">

    <include
        android:id="@+id/statu"
        layout="@layout/status_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px130"
        android:layout_marginTop="@dimen/px10"
        />

    <View
        android:id="@+id/status_back"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/tran"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/bluetooth_rl_setting"
        android:layout_marginTop="80dp"
        android:text="@string/bluetooth_setting_title"
        android:textColor="#fff"
        android:textSize="35sp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/empty_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bluetooth_rl_setting"
        android:layout_below="@+id/statu"
        android:layout_marginLeft="@dimen/px5"
        android:layout_marginTop="@dimen/px10"
        android:gravity="bottom"
        android:text="@string/bluetooth_setting_title"
        android:textColor="#b6b6b6"
        android:textSize="@dimen/px24"/>

    <RelativeLayout
        android:id="@+id/bluetooth_rl_setting"
        android:layout_width="@dimen/px1200"
        android:layout_height="@dimen/px200"
        android:layout_below="@+id/empty_view"
        android:layout_centerHorizontal="true"
        android:background="@drawable/about_bg"
        android:gravity="center"
        android:paddingLeft="@dimen/px30"
        android:paddingRight="@dimen/px30">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/bluetooth_rl_open"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/px80"
                android:background="@drawable/sel_focus"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:text="@string/bluetooth_openning"
                    android:textColor="@color/white"
                    android:textSize="22sp"/>

                <ImageView
                    android:id="@+id/bluetooth_iv_open"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_alignParentRight="true"
                    android:layout_margin="5dp"
                    android:background="@drawable/switch_on"
                    android:visibility="gone"/>

                <com.zx.zxtvsettings.bluetooth.SwitchBar
                    android:id="@+id/open_switchbar"
                    android:layout_width="@dimen/px200"
                    android:layout_height="@dimen/px80"
                    android:layout_alignParentRight="true"
                    android:layout_margin="@dimen/px10"
                    android:visibility="visible">

                </com.zx.zxtvsettings.bluetooth.SwitchBar>


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/bluetooth_rl_detection"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/px80"
                android:background="@drawable/sel_focus"
                android:focusable="true"
                android:gravity="center_vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:text="@string/bluetooth_open_conect"
                    android:textColor="@color/white"
                    android:textSize="22sp"/>

                <ImageView
                    android:id="@+id/bluetooth_iv_detection"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_alignParentRight="true"
                    android:layout_margin="5dp"
                    android:background="@drawable/switch_on"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/bluetooth_rl_search"
                android:layout_width="match_parent"
                android:layout_height="@dimen/px80"
                android:background="@drawable/sel_focus"
                android:focusable="true"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:text="@string/bluetooth_scan_device"
                    android:textColor="@color/white"
                    android:textSize="22sp"/>

                <ImageView
                    android:id="@+id/bluetooth_iv_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_margin="5dp"
                    android:background="@drawable/rotate"/>

            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/bluetooth_tv_pair"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/bluetooth_rl_setting"
        android:layout_below="@+id/bluetooth_rl_setting"
        android:gravity="center"
        android:text="@string/bluetooth_connected_device"
        android:textColor="@color/white"
        android:textSize="20sp"/>

    <RelativeLayout
        android:id="@+id/bluetooth_rl_pair"
        android:layout_width="@dimen/px1200"
        android:layout_height="@dimen/px100"
        android:layout_below="@id/bluetooth_rl_setting"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/px50"
        android:background="@drawable/about_bg"
        android:paddingLeft="@dimen/px30"
        android:paddingRight="@dimen/px30">

        <RelativeLayout
            android:id="@+id/bluetooth_rl_pair1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@drawable/sel_focus"
            android:focusable="true"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/bluetooth_tv_pair_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center"
                android:text="@string/bluetooth_not_conected"
                android:textColor="@color/white"
                android:textSize="22sp"/>

            <TextView android:id="@+id/bluetooth_tv_pair_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_margin="8dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="22sp"/>

        </RelativeLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/bluetooth_tv_search_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/bluetooth_rl_setting"
        android:layout_below="@id/bluetooth_rl_pair"
        android:layout_margin="5dp"
        android:gravity="center"
        android:text="@string/bluetooth_scan_title"
        android:textColor="@color/white"
        android:textSize="20sp"/>

    <RelativeLayout
        android:id="@+id/bluetooth_rl_search_device"
        android:layout_width="@dimen/px1200"
        android:layout_height="@dimen/px450"
        android:layout_below="@id/bluetooth_rl_pair"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/px50"
        android:paddingBottom="@dimen/px10"
        android:background="@drawable/about_bg"
        android:paddingLeft="@dimen/px30"
        android:paddingRight="@dimen/px30">

        <ListView
            android:id="@+id/bluetooth_lv_search_device"
            android:layout_width="match_parent"
            android:layout_height="@dimen/px400"
            android:layout_margin="@dimen/px10"
            android:layout_marginBottom="@dimen/px15"
            android:scrollbars="none"
            android:visibility="gone"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:scrollbars="none"
            android:layout_margin="@dimen/px10"
            android:layout_marginBottom="@dimen/px15"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >

                <LinearLayout
                    android:id="@+id/bluetooth_ll_search_device_pired"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"

                    >

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/bluetooth_ll_search_device"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                </LinearLayout>


            </LinearLayout>


        </ScrollView>

    </RelativeLayout>
</RelativeLayout>